--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,11 @@ build_src_filter = +<excavator.cpp>
 lib_deps =
   madhephaestus/ESP32Servo @ 3.0.6
   adafruit/Adafruit MCP23017 Arduino Library @ 2.3.2
+
+[env:semi]
+platform = espressif32@6.10.0
+board = esp32doit-devkit-v1
+framework = arduino
+build_src_filter = +<semi.cpp>
+lib_deps =
+  madhephaestus/ESP32Servo @ 3.0.6
