add Forklift code-untested

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,3 +40,11 @@ framework = arduino
 build_src_filter = +<semi.cpp>
 lib_deps =
   madhephaestus/ESP32Servo @ 3.0.6
+
+[env:fork]
+platform = espressif32@6.10.0
+board = esp32doit-devkit-v1
+framework = arduino
+build_src_filter = +<fork.cpp>
+lib_deps =
+  madhephaestus/ESP32Servo @ 3.0.6
