Revert "fix: update framework bluepad32 package URL in platformio.ini"
This reverts commit 2b15ae8bce3884344ab5aa0b232811eba11c1d13.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 monitor_speed = 115200
 build_src_filter = +<base.cpp>
 platform_packages =
-   framework-arduinoespressif32@https://github.com/ricardoquesada/esp32-arduino-lib-builder/releases/download/4.1.0/esp32-bluepad32-4.1.0.zip
+   framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
 
 [env:dump]
 platform = espressif32@6.10.0
