--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,18 +1,25 @@
 {
-  "projectName": "BOOTCAMP",
+  "projectName": "BootCamp",
   "projectOwner": "daltonpearson",
+  "repoType": "github",
+  "repoHost": "https://github.com",
+  "files": [
+    "README.md"
+  ],
+  "imageSize": 100,
+  "commit": true,
+  "commitConvention": "angular",
   "contributors": [
     {
-        "login": "daltonpearson",
-        "name": "Dalton Pearson",
-        "avatar_url": "https://avatars.githubusercontent.com/u/32880838?v=4",
-        "profile": "https://github.com/daltonpearson",
-        "contributions": [
-          "code",
-          "ideas",
-          "projectManagement",
-          "review"
-        ]
+      "login": "daltonpearson",
+      "name": "Dalton Pearson",
+      "avatar_url": "https://avatars.githubusercontent.com/u/32880838?v=4",
+      "profile": "https://github.com/daltonpearson",
+      "contributions": [
+        "code"
+      ]
     }
-  ]
+  ],
+  "contributorsPerLine": 7,
+  "linkToUsage": true
 }
