--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/32880838?v=4",
       "profile": "https://github.com/daltonpearson",
       "contributions": [
-        "code"
+        "code",
+        "ideas"
       ]
     }
   ],
