docs: update @daltonpearson as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,7 +17,9 @@
       "profile": "https://github.com/daltonpearson",
       "contributions": [
         "code",
-        "ideas"
+        "ideas",
+        "projectManagement",
+        "maintenance"
       ]
     }
   ],
