--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,11 +18,12 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install PlatformIO Core
-        run: pip install --upgrade platformio
+        run: pip install --upgrade platformio & echo $PWD & ls -lah
 
       - name: Build Base Station
         run: pio run -e base
       - uses: actions/upload-artifact@v4
         with:
           name: base-firmware.bin
-          path: .pio\build\base\firmware.bin
+          path: .pio/build/base/firmware.bin
+          include-hidden-files: true
