--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
           key: ${{ runner.os }}-pio
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
 
@@ -40,7 +40,7 @@ jobs:
           key: ${{ runner.os }}-pio
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
 
@@ -72,4 +72,13 @@ jobs:
         with:
           name: semi-firmware
           path: .pio/build/semi/firmware.bin
+          include-hidden-files: true
+      - uses: actions/upload-artifact@v4
+        with:
+          name: vehicle-firmware
+          path: |
+            .pio/build/dump/firmware.bin
+            .pio/build/excavator/firmware.bin
+            .pio/build/fork/firmware.bin
+            .pio/build/semi/firmware.bin
           include-hidden-files: true
