--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,7 +77,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: base-firmware
-          path: .pio/build/base/firmware.bin
+          path: .pio/build/base/
 
       - name: Display structure of downloaded files
         run: ls -R .pio/build/base/
