--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,7 +84,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: vehicle-firmware
+          name: all-firmware
           path: |
             .pio/build/dump/firmware.bin
             .pio/build/excavator/firmware.bin
