feat: add trailer control functionality and update platformio configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,3 +53,12 @@ monitor_speed = 115200
 build_src_filter = +<fork.cpp>
 lib_deps =
   madhephaestus/ESP32Servo @ 3.0.6
+
+[env:trailer]
+platform = espressif32@6.10.0
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<trailer.cpp>
+lib_deps =
+  madhephaestus/ESP32Servo @ 3.0.6
