--- a/platformio.ini
+++ b/platformio.ini
@@ -62,3 +62,12 @@ monitor_speed = 115200
 build_src_filter = +<trailer.cpp>
 lib_deps =
   madhephaestus/ESP32Servo @ 3.0.6
+
+[env:skidi]
+platform = espressif32@6.10.0
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<skidi.cpp>
+lib_deps =
+  madhephaestus/ESP32Servo @ 3.0.6
